# Asinc-Roulette

./: .gitignore  .gitmodules  CMakeLists.txt  ReadMe.md  client.cpp  config.json  server.cpp
commands/: Command.cpp  Command.h  Commands.cpp  Commands.h  permitions.h
crypto/: CryptoClient.cpp  CryptoClient.h  CryptoServer.cpp  Transfer.cpp  Transfer.h
lib/: aes.cpp  aes.h  base64.cpp  base64.h  biginteger.h
simple/: Client.h  EchoServer.cpp  EchoServer.h  ReadClient.cpp  ReadClient.h  Server.cpp  Server.h  SimpleServerCommands.h  client.cpp  config.h  playgound.cpp  server.cpp
src/: Client.cpp  Client.h  Command.h  Config.cpp  Config.h  SafeSocket.h  Server.cpp  Server.h  Socket.cpp  Socket.h  TCPServer.cpp  Transfer.cpp  Transfer.h  client.cpp  config.h  encryption.h  global.h  init.cpp  playgound.cpp  playground.cpp  server.cpp  strings.h  transfer.cpp  transfer.h
src/commands/: ClientCommands.cpp  ClientCommands.h  Command.h  Commands.cpp  Commands.h  ServerCommands.h  permissions.h  permitions.h
src/core/: Client.cpp  Client.h  DataBase.cpp  DataBase.h  Server.cpp  Server.h  config.h
src/crypto/: CryptoClient.cpp  CryptoServer.cpp  CryptoServer.h  Session.h  SessionClient.cpp  SessionClient.h  SessionServer.cpp  SessionServer.h  Transfer.cpp  Transfer.h  config.h  strings.h
src/game/: Client.cpp  Client.h  DataBase.h  Role.h  Server.cpp  Server.h  State.h  Table.h
src/handlers/: ClientHandlers.cpp  ClientHandlers.h  Handlers.h  ServerHandlers.cpp  ServerHandlers.h
src/session/: Session.cpp  Session.h  SessionClient.cpp  SessionClient.h  SessionServer.cpp  SessionServer.h
src/simple/: Client.cpp  Client.h  EchoServer.cpp  EchoServer.h  ReadClient.cpp  ReadClient.h  Server.cpp  Server.h  SimpleServerCommands.h  config.h
src/tcp/: LinuxSocket.cpp  LinuxSocket.h  LinuxTCPSocket.cpp  Socket.h  TCPClient.h  TCPServer.cpp  TCPServer.h  TransferClient.cpp  TransferClient.h  TransferServer.cpp  TransferServer.h  WinSocket.cpp  WinSocket.h
src/transfer/: LinuxTCPSocket.h  Socket.h  TransferClient.h  TransferServer.cpp  TransferServer.h
src/transfer/tcp/: LinuxSocket.cpp  LinuxSocket.h  Socket.h  TransferClient.cpp  TransferServer.cpp  TransferServer.h  WinSocket.cpp  WinSocket.h
src/transfer/udp/: LinuxSocket.cpp  LinuxSocket.h  Socket.h  TransferClient.cpp  TransferClient.h  TransferServer.cpp  TransferServer.h  WinSocket.cpp  WinSocket.h
tcp/: SafeSocket.h  SendSocket.h  Socket.cpp  Socket.h  TCPClient.cpp  TCPClient.h  TCPServer.cpp  TCPServer.h  ThreadPool.h
